--- a/src/styles.css
+++ b/src/styles.css
@@ -5,11 +5,21 @@
 
 hr {
   border-top: 1px solid #ddd;
+  width: 95vw;
+  margin: 1rem 0;
+}
+
+.table-name {
+  color: rgb(58, 187, 186);
+}
+
+.forms-container {
+  width: 95vw;
+  margin: auto;
 }
 
 /*filter-form*/
 .filter-form {
-  margin: 1rem;
   width: 26rem;
   display: flex;
   flex-direction: row;
@@ -18,7 +28,6 @@ hr {
 
 /*sort-form*/
 .sort-form {
-  margin: 1rem;
   width: 26rem;
   display: flex;
   flex-direction: row;
@@ -26,22 +35,25 @@ hr {
 }
 
 /*Table styling*/
-.table-name {
-  margin-left: 1rem;
-  color: rgb(58, 187, 186);
+
+.table-container {
+  overflow-x: auto;
+  overflow-y: auto;
+  width: 95vw;
+  height: 60vh;
+  margin: auto;
 }
 
 .antibody-table {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
-  width: 80%;
-  margin-left: 1rem;
+
+  width: 100%;
 }
 
-.antibody-table td,
-.customers th {
+.antibody-table td {
   border: 1px solid #ddd;
-  padding: 3px;
+  padding: 5px;
 }
 
 .antibody-table tr:nth-child(even) {
@@ -58,4 +70,5 @@ hr {
   text-align: left;
   background-color: rgb(27, 41, 68);
   color: rgb(255, 104, 30);
+  padding: 5px;
 }
