--- a/src/styles.css
+++ b/src/styles.css
@@ -51,7 +51,10 @@ hr {
 .table-container {
   overflow-x: auto;
   overflow-y: auto;
-  height: 80vh;
+  position: absolute;
+  top: 180px;
+  bottom: 0;
+  width: 95vw;
 }
 
 .antibody-table {
